<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nightout.ofek.nightout.ShowSelectedClub">


    <RatingBar
        android:id="@+id/ratingbarPub"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/nameTextView"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.074"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="1.0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/visitHTextView"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/addressTextView"
        android:text="Address:"
        android:textSize="20sp"
        android:id="@+id/textView2"
        android:layout_marginBottom="17dp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        android:layout_marginRight="303dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/nameTextView"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/nameTextView"
        android:text="Name:"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.946"
        android:id="@+id/textView8"
        app:layout_constraintRight_toLeftOf="@+id/nameTextVC"
        android:layout_marginRight="35dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ageTextV"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/capTextV"
        android:text="Capacity:"
        android:textSize="20sp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/textView4"
        android:layout_marginBottom="19dp"
        app:layout_constraintBottom_toTopOf="@+id/DontTouch2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/phoneNumTextView"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/ageTextV"
        android:text="Age:"
        android:textSize="20sp"
        android:id="@+id/DontTouch2"
        android:layout_marginRight="343dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.362" />

    <TextView
        android:layout_width="69dp"
        android:layout_height="27dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/phoneNumTextView"
        android:layout_marginLeft="-10dp"
        android:layout_toStartOf="@+id/phoneNumTextView"
        android:text="Price"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/DontTouch"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="230dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/DontTouch2"
        app:layout_constraintVertical_bias="0.126" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/addressTextView"
        android:layout_alignTop="@+id/ageTextV"
        android:layout_toEndOf="@+id/ageTextV"
        android:text="+"
        android:textSize="20sp"
        android:id="@+id/textView11"
        android:layout_marginRight="242dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.362" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Line"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/textView9"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/DontTouch"
        app:layout_constraintVertical_bias="0.038"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/lineTextVC"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.0" />


    <TextView
        android:id="@+id/nameTextVC"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="79dp"
        android:ems="10"
        android:hint="@string/NAME"
        android:inputType="textNoSuggestions"
        android:text="Name"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.339"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/priceTextVC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="number"
        android:text="Price"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.202"
        app:layout_constraintLeft_toRightOf="@+id/DontTouch"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageTextVC"
        app:layout_constraintVertical_bias="0.013" />

    <TextView
        android:id="@+id/addressTextVC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/adress"
        android:inputType="textPostalAddress"
        android:text="address"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/nameTextVC"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.082" />

    <TextView
        android:id="@+id/capTextVC"
        android:layout_width="113dp"
        android:layout_height="21dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/capacity"
        android:inputType="number"
        android:text="Capacity"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.011"
        app:layout_constraintLeft_toRightOf="@+id/textView4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressTextVC" />

    <TextView
        android:id="@+id/descriptionTextVC"
        android:layout_width="377dp"
        android:layout_height="129dp"
        android:layout_marginBottom="64dp"
        android:autoLink="web|email|phone"
        android:ems="10"
        android:hint="@string/write_somthing_to_describe_your_club"
        android:inputType="textLongMessage"
        android:lines="5"
        android:overScrollMode="ifContentScrolls"
        android:text="Description"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/ageTextVC"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="6dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/min_age"
        android:text="Age"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/DontTouch2"
        app:layout_constraintRight_toLeftOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/capTextVC" />

    <TextView
        android:id="@+id/lineTextVC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="74dp"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/line"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceTextVC"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>
